--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <meta charset="UTF-8">
@@ -10,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Dashboard Fungitech</h1>
+        <h1>Dashboard Fungitec</h1>
     </header>
 
     <div class="center">
